--- a/contacts.html
+++ b/contacts.html
@@ -16,7 +16,10 @@
     <header>
         <nav>
             <div class="wrapper">
-                <div class="navigation">
+                <div class="burger clicked" id="burger">
+                    <span></span>
+                </div>
+                <div class="navigation" id="onclickk">
                     <div class="menu">
                         <ul class="mainmenu">
                             <li><a href="index.html">Головна</a></li>
@@ -34,6 +37,7 @@
                         </ul>
                     </div>
                 </div>
+
             </div>
         </nav>
 
@@ -193,6 +197,7 @@
     </footer>
 
 
+    <script src="script.js"></script>
 
 </body>
 
