--- a/price.html
+++ b/price.html
@@ -15,12 +15,14 @@
     <header>
         <nav>
             <div class="wrapper">
-                <div class="navigation">
+                <div class="burger clicked" id="burger">
+                    <span></span>
+                </div>
+                <div class="navigation" id="onclickk">
                     <div class="menu">
                         <ul class="mainmenu">
                             <li><a href="index.html">Головна</a></li>
-                            <li><a href="#">Про компанію</a>
-                            </li>
+                            <li><a href="#">Про компанію</a></li>
                             <li><a href="price.html">Наші будівлі</a></li>
                             <li><a href="#">Акції</a></li>
                             <li><a href="contacts.html">Контакти</a></li>
@@ -34,6 +36,7 @@
                         </ul>
                     </div>
                 </div>
+
             </div>
         </nav>
 
@@ -279,6 +282,8 @@
 
         </div>
     </footer>
+    <script src="script.js"></script>
+
 </body>
 
 </html>
