--- a/contacts.html
+++ b/contacts.html
@@ -124,9 +124,9 @@
                         </div>
                         <div class="row">
 
-                            <p><label for="name"></label><input type="text" name="name" id="name"
+                            <p class="namefield"><label for="name"></label><input type="text" name="name" id="name"
                                     placeholder="Ваше ім’я"></p>
-                            <p><label for="phone"></label><input type="tel" name="name" id="phone"
+                            <p class="phonefield"><label for="phone"></label><input type="tel" name="name" id="phone"
                                     placeholder="Телефон"></p>
 
                         </div>
