--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 
 
 <body>
+    
     <header>
         <nav>
             <div class="wrapper">
-                <div class="burger clicked" id="burger">
+                <div class="burger" id="burger">
                     <span></span>
                 </div>
-                <div class="navigation" id="onclickk">
+                <div class="navigation" id="openedmenu">
                     <div class="menu">
                         <ul class="mainmenu">
                             <li><a href="index.html">Головна</a></li>
@@ -41,27 +42,8 @@
                         </ul>
                     </div>
                 </div>
-
             </div>
         </nav>
-
-
-        <div class="wrapper">
-            <div class="header-info">
-                <a href="index.html"><img src="img/logo.png" alt="Main Logo"></a>
-                <div class="phone">
-                    <p><a class="phn" href="#">+38(097) 100-25-25</a></p>
-                    <p><a href="#">+38(097) 100-25-25</a></p>
-                </div>
-                <div class="email">
-                    <p><a class="eml" href="#">hataplus@hata.com.ua</a></p>
-                    <p><a class="skype" href="#">hataplus</a></p>
-                </div>
-                <div class="buttoncall">
-                    <a href="#">Замовити дзвінок</a>
-                </div>
-            </div>
-        </div>
     </header>
 
     <main>
