--- a/contacts.html
+++ b/contacts.html
@@ -16,10 +16,10 @@
     <header>
         <nav>
             <div class="wrapper">
-                <div class="burger clicked" id="burger">
+                <div class="burger" id="burger">
                     <span></span>
                 </div>
-                <div class="navigation" id="onclickk">
+                <div class="navigation" id="openedmenu">
                     <div class="menu">
                         <ul class="mainmenu">
                             <li><a href="index.html">Головна</a></li>
@@ -37,7 +37,6 @@
                         </ul>
                     </div>
                 </div>
-
             </div>
         </nav>
 
