--- a/price.html
+++ b/price.html
@@ -15,10 +15,10 @@
     <header>
         <nav>
             <div class="wrapper">
-                <div class="burger clicked" id="burger">
+                <div class="burger" id="burger">
                     <span></span>
                 </div>
-                <div class="navigation" id="onclickk">
+                <div class="navigation" id="openedmenu">
                     <div class="menu">
                         <ul class="mainmenu">
                             <li><a href="index.html">Головна</a></li>
@@ -36,7 +36,6 @@
                         </ul>
                     </div>
                 </div>
-
             </div>
         </nav>
 
@@ -206,36 +205,32 @@
                 <div class="examples">
                     <figure class="edmonton">
                         <img src="img/edmonton.png" alt="first house">
-                        <a href="#">
+                        <a href="#"></a>
                             <h2>EDMONTON (338 м<sup>2</sup>)</h2>
-                        </a>
                         <p>Загальна площа будови: 312 м<sup>2</sup></p>
                         <p>Кількість спалень: 4</p>
                         <p>Гараж: 2 авто</p>
                     </figure>
                     <figure class="montreal">
                         <img src="img/montreal.png" alt="second house">
-                        <a href="#">
+                        <a href="#"></a>
                             <h2>MONTREAL (332 м<sup>2</sup>)</h2>
-                        </a>
                         <p>Загальна площа будови: 290 м<sup>2</sup> </p>
                         <p> Кількість спалень: 3</p>
                         <p>Гараж: 2 авто</p>
                     </figure>
                     <figure class="calgary">
                         <img src="img/calgary.png" alt="third house">
-                        <a href="#">
+                        <a href="#"></a>
                             <h2>CALGARY (294 м<sup>2</sup>)</h2>
-                        </a>
                         <p>Загальна площа будови: 272 м<sup>2</sup> </p>
                         <p> Кількість спалень: 3</p>
                         <p>Гараж: 2 авто</p>
                     </figure>
                     <figure class="richmond">
                         <img src="img/richmond.jpeg" alt="fourth house">
-                        <a href="#">
+                        <a href="#"></a>
                             <h2>RICHMOND (324 м<sup>2</sup>)</h2>
-                        </a>
                         <p>Загальна площа будови: 242 м<sup>2</sup></p>
                         <p>Кількість спалень: 3</p>
                         <p>Гараж: 3 авто</p>
