--- a/contacts.html
+++ b/contacts.html
@@ -144,7 +144,7 @@
                         <div class="row last">
                             <p><input class="button" type="button" value="Відправити" id="button"><label
                                     for="button">Відправити</label></p>
-                            <p class="checkbox"><input type="checkbox" id="check"><label for="check">Я бажаю отримувати
+                            <p class="checkbox"><input type="checkbox" id="check" class="check"><label for="check">Я бажаю отримувати
                                     останні новини</label></p>
                         </div>
 
