--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="index.html"><img src="img/logo.png" alt="Main Logo"></a>
                 <div class="phone">
                     <p><a class="phn" href="#">+38(097) 100-25-25</a></p>
-                    <p><a href="#">+38(097) 100-25-25</a></p>
+                    <p><a href="tel: +38(097) 100-25-25">+38(097) 100-25-25</a></p>
                 </div>
                 <div class="email">
                     <p><a class="eml" href="#">hataplus@hata.com.ua</a></p>
