--- a/contacts.html
+++ b/contacts.html
@@ -46,12 +46,12 @@
             <div class="header-info">
                 <a href="index.html"><img src="img/logo.png" alt="Main Logo"></a>
                 <div class="phone">
-                    <p><a class="phn" href="#">+38(097) 100-25-25</a></p>
-                    <p><a href="#">+38(097) 100-25-25</a></p>
+                    <p><a class="phn" href="tel: +38(097) 100-25-25">+38(097) 100-25-25</a></p>
+                    <p><a href="tel: +38(097) 100-25-25">+38(097) 100-25-25</a></p>
                 </div>
                 <div class="email">
-                    <p><a class="eml" href="#">hataplus@hata.com.ua</a></p>
-                    <p><a class="skype" href="#">hataplus</a></p>
+                    <p><a class="eml" href="mailto: hataplus@hata.com.ua">hataplus@hata.com.ua</a></p>
+                    <p><a class="skype" href="skype: hataplus">hataplus</a></p>
                 </div>
                 <div class="buttoncall">
                     <a href="#">Замовити дзвінок</a>
@@ -73,8 +73,8 @@
                         <li>
                             <p>с. Війтівці, Хмельницька обл. 27500</p>
                         </li>
-                        <li><a href="#">+38(097) 100-25-25</a></li>
-                        <li><a href="#">+38(097) 100-25-25</a></li>
+                        <li><a href="tel: +38(097) 100-25-25">+38(097) 100-25-25</a></li>
+                        <li><a href="tel: +38(097) 100-25-25">+38(097) 100-25-25</a></li>
                         <li>
                             <p>hataplus@hata.com.ua</p>
                         </li>
@@ -86,11 +86,11 @@
                         <li>
                             <p>менеджер:</p>
                         </li>
-                        <li><a href="#">+38(067) 123-10-05</a></li>
+                        <li><a href="tel: +38(097) 100-25-25">+38(067) 123-10-05</a></li>
                         <li>
                             <p>директор:</p>
                         </li>
-                        <li><a href="#">+38(068) 950-27-91</a></li>
+                        <li><a href="tel: +38(097) 100-25-25">+38(068) 950-27-91</a></li>
                     </ul>
                 </div>
                 <div class="column">
@@ -178,12 +178,12 @@
                         </ul>
                     </div>
                     <div class="phone">
-                        <p><a class="phn" href="#">+38(097) 100-25-25</a></p>
-                        <p><a href="#">+38(097) 100-25-25</a></p>
+                        <p><a class="phn" href="tel: +38(097) 100-25-25">+38(097) 100-25-25</a></p>
+                        <p><a href="tel: +38(097) 100-25-25">+38(097) 100-25-25</a></p>
                     </div>
                     <div class="email">
-                        <p><a class="eml" href="#">hataplus@hata.com.ua</a></p>
-                        <p><a class="skype" href="#">hataplus</a></p>
+                        <p><a class="eml" href="mailto: hataplus@hata.com.ua">hataplus@hata.com.ua</a></p>
+                        <p><a class="skype" href="skype: hataplus">hataplus</a></p>
                     </div>
                 </div>
             </div>
