--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
             <div class="header-info">
                 <a href="index.html"><img src="img/logo.png" alt="Main Logo"></a>
                 <div class="phone">
-                    <p><a class="phn" href="#">+38(097) 100-25-25</a></p>
+                    <p><a class="phn" href="tel: +38(097) 100-25-25">+38(097) 100-25-25</a></p>
                     <p><a href="tel: +38(097) 100-25-25">+38(097) 100-25-25</a></p>
                 </div>
                 <div class="email">
-                    <p><a class="eml" href="#">hataplus@hata.com.ua</a></p>
-                    <p><a class="skype" href="#">hataplus</a></p>
+                    <p><a class="eml" href="mailto: hataplus@hata.com.ua">hataplus@hata.com.ua</a></p>
+                    <p><a class="skype" href="skype: hataplus">hataplus</a></p>
                 </div>
                 <div class="buttoncall">
                     <a href="#">Замовити дзвінок</a>
@@ -209,12 +209,12 @@
                         </ul>
                     </div>
                     <div class="phone">
-                        <p><a class="phn" href="#">+38(097) 100-25-25</a></p>
-                        <p><a href="#">+38(097) 100-25-25</a></p>
+                        <p><a class="phn" href="tel: +38(097) 100-25-25">+38(097) 100-25-25</a></p>
+                        <p><a href="tel: +38(097) 100-25-25">+38(097) 100-25-25</a></p>
                     </div>
                     <div class="email">
-                        <p><a class="eml" href="#">hataplus@hata.com.ua</a></p>
-                        <p><a class="skype" href="#">hataplus</a></p>
+                        <p><a class="eml" href="mailto: hataplus@hata.com.ua">hataplus@hata.com.ua</a></p>
+                        <p><a class="skype" href="skype: hataplus">hataplus</a></p>
                     </div>
                 </div>
             </div>
